<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/millicon_background">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/splashicon"
        android:layout_width="246dp"
        android:layout_height="282dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        android:src="@mipmap/millicon" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/splashicon"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="19dp"
        android:fontFamily="monospace"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/explain"
        android:layout_width="386dp"
        android:layout_height="240dp"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:text="@string/explain"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/playbutton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/explain"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:text="@string/play"
        android:textAlignment="center" />

</RelativeLayout>
</ScrollView>